<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>com.trionesdev</groupId>
        <artifactId>triones-spring-boot-parent</artifactId>
        <version>3.0-SNAPSHOT</version>
        <relativePath/>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <artifactId>triones-template</artifactId>
    <groupId>com.trionesdev.template</groupId>
    <version>1.0-SNAPSHOT</version>
    <name>TrionesAdmin</name>


    <modules>
        <module>infrastructure</module>
        <module>serve</module>
        <module>core</module>
        <module>interfaces</module>
        <module>db</module>
    </modules>

    <properties>
        <skip.deploy>true</skip.deploy>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.trionesdev.template</groupId>
                <artifactId>infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trionesdev.template</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trionesdev.template</groupId>
                <artifactId>db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trionesdev.template</groupId>
                <artifactId>rest-tenant</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trionesdev.template</groupId>
                <artifactId>rest-boss</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <repositories>
        <repository>
            <id>ms-repository</id>
            <url>https://nexus.moensun.com/repository/maven-public</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>ms-repository</id>
            <url>https://nexus.moensun.com/repository/maven-public</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


</project>
